2015-08-26 Michele Pinamonti <michele.pinamonti@gmail.com>
        * mainly TtHFit.C & myFit.C: command line argument added: a list of options. See README file for details.
        
2015-08-25 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TthPlot: norm. signal added to legend (to have norm sig, use the option "PlotOptions: "NORMSIG" ")
        * TthPlot: variable bins divided by bin width / nominal bin width (as region option, specify "BinWidth: ...")
        * TtHFit.C, Region.C, Sample.C/.h: added Sample::fGroup attribute, to be used to group samples in plots instead of using the same title
        * TtHFit.C: NtuplePath can be specified for Samples in config file

2015-08-11 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit.C: Fixed NtupleNameUp and Down option
        * All: Fixed NP names / titles in plots
        * HistoTools.C: Fixed issue with one-sided syst symmetrization
        * All: Fixed memory leak warnings
        * Common.C/h: overflow/underflow merged to firts/last bin when creating hist from ntup (solving warning from HistoTools)
        * TtHFit.C: Pruning plot added (created when the option "w" is used)
        
2015-07-24 Michele Pinamonti <michele.pinamonti@gmail.com>
        * All: added few options to config file
        * TtHFit.C: rebinning added for ntuple inputs
        
2015-07-03 Loic Valery <lvalery@cern.ch>
        * Disentangle S+B fit and CRonly/SR+CR fits

2015-07-01 Loic Valery <lvalery@cern.ch>
        * Change TthPlot to avoid nan problems when no data
        * Some cleaning in TthPlot
        * Fixed bug in post-fit NormFactor error propagation

2015-06-24 Michele Pinamonti <michele.pinamonti@gmail.com>
        * All: Minor fixes
        * Svn-Tagging: 00-00-02
        
2015-06-23 Loic Valery <lvalery@cern.ch>
        * Changing HistoChecks and preceeds it by corrections for null bins and weird systematics
        * Fix text color problems in HistoChecks
